--- a/index.css
+++ b/index.css
@@ -1,9 +1,38 @@
-.App {
+* {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #646472;
+}
+
+.page {
     display: flex;
-    height: 100vh;
+    min-height: 100vh;
     flex-direction: column;
+    height: auto;
+    position: relative;
+    width: 100%;
     justify-content: center;
-    align-items: center;
+}
+
+.container {
+    padding-left: 15px;
+    top: 0;
+    width: 100%;
+    margin: 0 auto;
+    position: relative;
+    left: 0;
+    max-width: 700px;
+    max-height: initial;
+    height: auto;
 }
 
 .card {
@@ -38,7 +67,7 @@
 
 .card_back {
     transform: rotateY(180deg);
-    background-color: #fff;
+    background-color: #31313a;
 }
 
 .card_front,
@@ -168,6 +197,10 @@
     z-index: 10;
 }
 
+.card_flipped .links {
+    z-index: 0;
+}
+
 .links:before {
     content: '';
     position: absolute;
@@ -205,4 +238,8 @@
 
 a {
     color: rgba(255, 255, 255, 0.55);
+}
+
+.about {
+    color: rgba(255, 255, 255, 0.85);
 }
