chore: update bg-photo; move resume to R2; add gitignore

--- a/index.css
+++ b/index.css
@@ -91,7 +91,7 @@ body {
     top: 0;
     width: 670px;
     height: 52%;
-    background-image: url("./assets/bg-photo.jfif");
+    background-image: url("./assets/bg-photo.webp");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
