chore: resize profile image; reformat code

--- a/index.css
+++ b/index.css
@@ -1,366 +1,365 @@
 * {
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-        "Helvetica Neue", sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    background-color: #646472;
-    overflow: hidden;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #646472;
+  overflow: hidden;
 }
 
 .page {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-    height: auto;
-    position: relative;
-    width: 100%;
-    justify-content: center;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  height: auto;
+  position: relative;
+  width: 100%;
+  justify-content: center;
 }
 
 .container {
-    padding-left: 15px;
-    top: 0;
-    width: 100%;
-    margin: 0 auto;
-    position: relative;
-    left: 0;
-    max-width: 700px;
-    max-height: initial;
-    height: auto;
+  padding-left: 15px;
+  top: 0;
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+  left: 0;
+  max-width: 700px;
+  max-height: initial;
+  height: auto;
 }
 
 .card {
-    perspective: 2000px;
+  perspective: 2000px;
 }
 
 .card_flipped .card_inner {
-    transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .card,
 .card_inner {
-    position: relative;
-    width: 670px;
-    height: 600px;
+  position: relative;
+  width: 670px;
+  height: 600px;
 }
 
 .card_inner {
-    transition: transform 0.5s ease-in-out;
-    transform: translateZ(0);
-    transform-origin: 50% 50%;
-    transform-style: preserve-3d;
+  transition: transform 0.5s ease-in-out;
+  transform: translateZ(0);
+  transform-origin: 50% 50%;
+  transform-style: preserve-3d;
 }
 
 .card_front {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #31313a;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #31313a;
 }
 
 .card_back {
-    transform: rotateY(180deg);
-    background-color: #31313a;
+  transform: rotateY(180deg);
+  background-color: #31313a;
 }
 
 .card_front,
 .card_back {
-    position: absolute;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    color: #31313a;
-    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.1);
-    backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  color: #31313a;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.1);
+  backface-visibility: hidden;
 }
 
 .slide {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 670px;
-    height: 52%;
-    background-image: url("./assets/bg-photo.webp");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 670px;
+  height: 52%;
+  background-image: url("./assets/bg-photo.webp");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
 
 .slide:before {
-    content: "";
-    position: absolute;
-    left: -25%;
-    bottom: -63%;
-    width: 100%;
-    height: 70%;
-    background-color: #31313a;
-    transform: rotate(12deg);
-    -webkit-transform: rotate(12deg);
+  content: "";
+  position: absolute;
+  left: -25%;
+  bottom: -63%;
+  width: 100%;
+  height: 70%;
+  background-color: #31313a;
+  transform: rotate(12deg);
+  -webkit-transform: rotate(12deg);
 }
 
 .slide:after {
-    content: "";
-    position: absolute;
-    left: 25%;
-    bottom: -63%;
-    width: 100%;
-    height: 70%;
-    background-color: #31313a;
-    transform: rotate(-12deg);
-    -webkit-transform: rotate(-12deg);
+  content: "";
+  position: absolute;
+  left: 25%;
+  bottom: -63%;
+  width: 100%;
+  height: 70%;
+  background-color: #31313a;
+  transform: rotate(-12deg);
+  -webkit-transform: rotate(-12deg);
 }
 
 .image {
-    margin: 80px 0 20px;
-    position: relative;
-    display: inline-block;
-    width: 146px;
+  margin: 80px 0 20px;
+  position: relative;
+  display: inline-block;
+  width: 146px;
 }
 
 .image:before {
-    content: "";
-    position: absolute;
-    top: 10px;
-    left: -10px;
-    width: 100%;
-    height: 100%;
-    border-radius: 100%;
-    -webkit-border-radius: 100%;
-    background-image: linear-gradient(
-        135deg,
-        rgba(255, 152, 0, 0.4) 0%,
-        rgba(255, 152, 0, 0.01) 100%
-    );
+  content: "";
+  position: absolute;
+  top: 10px;
+  left: -10px;
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+  -webkit-border-radius: 100%;
+  background-image: linear-gradient(
+    135deg,
+    rgba(255, 152, 0, 0.4) 0%,
+    rgba(255, 152, 0, 0.01) 100%
+  );
 }
 
 .image img {
-    border-color: #31313a;
-    background-color: #31313a;
-    position: relative;
-    display: block;
-    width: 100%;
-    height: auto;
-    border: 3px solid;
-    border-radius: 100%;
-    -webkit-border-radius: 100%;
+  border-color: #31313a;
+  background-color: #31313a;
+  position: relative;
+  display: block;
+  width: 100%;
+  height: auto;
+  border: 3px solid;
+  border-radius: 100%;
+  -webkit-border-radius: 100%;
 }
 
 .title {
-    color: rgba(255, 255, 255, 0.85);
-    position: relative;
-    margin: 0 0 10px;
-    font-size: 34px;
-    line-height: 32px;
-    font-weight: 400;
+  color: rgba(255, 255, 255, 0.85);
+  position: relative;
+  margin: 0 0 10px;
+  font-size: 34px;
+  line-height: 32px;
+  font-weight: 400;
 }
 
 .subtitle {
-    color: #ff9800;
-    position: relative;
-    margin: 0;
-    display: inline-block;
-    font-size: 16px;
-    line-height: 20px;
-    height: 20px;
-    font-weight: 400;
+  color: #ff9800;
+  position: relative;
+  margin: 0;
+  display: inline-block;
+  font-size: 16px;
+  line-height: 20px;
+  height: 20px;
+  font-weight: 400;
 }
 
 .social {
-    position: relative;
-    margin: 16px 0 0;
+  position: relative;
+  margin: 16px 0 0;
 }
 
 .social a {
-    margin: 0 6px;
-    display: inline-block;
-    vertical-align: middle;
+  margin: 0 6px;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .links {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 70px;
-    display: flex;
-    flex-direction: row;
-    z-index: 10;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  flex-direction: row;
+  z-index: 10;
 }
 
 .card_flipped .links {
-    z-index: 0;
+  z-index: 0;
 }
 
 .links:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 1px;
-    background: radial-gradient(
-        ellipse at left,
-        rgba(197, 202, 213, 0.15) 0%,
-        rgba(255, 255, 255, 0) 70%
-    );
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 1px;
+  background: radial-gradient(
+    ellipse at left,
+    rgba(197, 202, 213, 0.15) 0%,
+    rgba(255, 255, 255, 0) 70%
+  );
 }
 
 .links a {
-    color: rgba(255, 255, 255, 0.85);
-    position: relative;
-    display: block;
-    width: 100%;
-    height: 70px;
-    line-height: 70px;
-    font-size: 14px;
-    font-weight: 500;
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
-    border: none;
+  color: rgba(255, 255, 255, 0.85);
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 70px;
+  line-height: 70px;
+  font-size: 14px;
+  font-weight: 500;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  border: none;
 }
 
 .links a:before {
-    content: "";
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 1px;
-    height: 100%;
-    background: radial-gradient(
-        ellipse at top,
-        rgba(197, 202, 213, 0.15) 0%,
-        rgba(255, 255, 255, 0) 70%
-    );
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 1px;
+  height: 100%;
+  background: radial-gradient(
+    ellipse at top,
+    rgba(197, 202, 213, 0.15) 0%,
+    rgba(255, 255, 255, 0) 70%
+  );
 }
 
 a {
-    color: rgba(255, 255, 255, 0.55);
+  color: rgba(255, 255, 255, 0.55);
 }
 
 .about {
-    color: rgba(255, 255, 255, 0.85);
+  color: rgba(255, 255, 255, 0.85);
 }
 
 .bg-bubbles {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 .bg-bubbles li {
-    position: absolute;
-    list-style: none;
-    display: block;
-    width: 40px;
-    height: 40px;
-    background-color: rgba(255, 255, 255, 0.15);
-    bottom: -160px;
-    -webkit-animation: square 25s infinite;
-    animation: square 40s infinite;
-    -webkit-transition-timing-function: linear;
-    transition-timing-function: linear;
+  position: absolute;
+  list-style: none;
+  display: block;
+  width: 40px;
+  height: 40px;
+  background-color: rgba(255, 255, 255, 0.15);
+  bottom: -160px;
+  -webkit-animation: square 25s infinite;
+  animation: square 40s infinite;
+  -webkit-transition-timing-function: linear;
+  transition-timing-function: linear;
 }
 .bg-bubbles li:nth-child(1) {
-    left: 10%;
+  left: 10%;
 }
 .bg-bubbles li:nth-child(2) {
-    left: 20%;
-    width: 80px;
-    height: 80px;
-    -webkit-animation-delay: 2s;
-    animation-delay: 2s;
-    -webkit-animation-duration: 17s;
-    animation-duration: 25s;
+  left: 20%;
+  width: 80px;
+  height: 80px;
+  -webkit-animation-delay: 2s;
+  animation-delay: 2s;
+  -webkit-animation-duration: 17s;
+  animation-duration: 25s;
 }
 .bg-bubbles li:nth-child(3) {
-    left: 25%;
-    -webkit-animation-delay: 4s;
-    animation-delay: 4s;
+  left: 25%;
+  -webkit-animation-delay: 4s;
+  animation-delay: 4s;
 }
 .bg-bubbles li:nth-child(4) {
-    left: 40%;
-    width: 60px;
-    height: 60px;
-    -webkit-animation-duration: 22s;
-    animation-duration: 31s;
-    background-color: rgba(255, 255, 255, 0.25);
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  -webkit-animation-duration: 22s;
+  animation-duration: 31s;
+  background-color: rgba(255, 255, 255, 0.25);
 }
 .bg-bubbles li:nth-child(5) {
-    left: 70%;
+  left: 70%;
 }
 .bg-bubbles li:nth-child(6) {
-    left: 80%;
-    width: 120px;
-    height: 120px;
-    -webkit-animation-delay: 3s;
-    animation-delay: 3s;
-    background-color: rgba(255, 255, 255, 0.2);
+  left: 80%;
+  width: 120px;
+  height: 120px;
+  -webkit-animation-delay: 3s;
+  animation-delay: 3s;
+  background-color: rgba(255, 255, 255, 0.2);
 }
 .bg-bubbles li:nth-child(7) {
-    left: 32%;
-    width: 160px;
-    height: 160px;
-    -webkit-animation-delay: 7s;
-    animation-delay: 7s;
+  left: 32%;
+  width: 160px;
+  height: 160px;
+  -webkit-animation-delay: 7s;
+  animation-delay: 7s;
 }
 .bg-bubbles li:nth-child(8) {
-    left: 55%;
-    width: 20px;
-    height: 20px;
-    -webkit-animation-delay: 15s;
-    animation-delay: 15s;
-    -webkit-animation-duration: 40s;
-    animation-duration: 50s;
+  left: 55%;
+  width: 20px;
+  height: 20px;
+  -webkit-animation-delay: 15s;
+  animation-delay: 15s;
+  -webkit-animation-duration: 40s;
+  animation-duration: 50s;
 }
 .bg-bubbles li:nth-child(9) {
-    left: 25%;
-    width: 10px;
-    height: 10px;
-    -webkit-animation-delay: 2s;
-    animation-delay: 2s;
-    -webkit-animation-duration: 40s;
-    animation-duration: 50s;
-    background-color: rgba(255, 255, 255, 0.3);
+  left: 25%;
+  width: 10px;
+  height: 10px;
+  -webkit-animation-delay: 2s;
+  animation-delay: 2s;
+  -webkit-animation-duration: 40s;
+  animation-duration: 50s;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 .bg-bubbles li:nth-child(10) {
-    left: 90%;
-    width: 160px;
-    height: 160px;
-    -webkit-animation-delay: 11s;
-    animation-delay: 11s;
+  left: 90%;
+  width: 160px;
+  height: 160px;
+  -webkit-animation-delay: 11s;
+  animation-delay: 11s;
 }
 @-webkit-keyframes square {
-    0% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-    }
-    100% {
-        -webkit-transform: translateY(-150vh) rotate(600deg);
-        transform: translateY(-150vh) rotate(600deg);
-    }
+  0% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  100% {
+    -webkit-transform: translateY(-150vh) rotate(600deg);
+    transform: translateY(-150vh) rotate(600deg);
+  }
 }
 @keyframes square {
-    0% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-    }
-    100% {
-        -webkit-transform: translateY(-150vh) rotate(600deg);
-        transform: translateY(-150vh) rotate(600deg);
-    }
+  0% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  100% {
+    -webkit-transform: translateY(-150vh) rotate(600deg);
+    transform: translateY(-150vh) rotate(600deg);
+  }
 }
-
