--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Bubbles from '../components/Bubbles.astro';
 export interface Props {
   title: string;
 }
@@ -22,7 +23,14 @@ const { title } = Astro.props;
   <body
     class="m-0 flex min-h-screen w-full items-center justify-center overflow-hidden bg-slate-500"
   >
-    <slot />
+    <div
+      class="w-full max-w-full overflow-hidden rounded-xl sm:max-w-screen-sm"
+    >
+      <div class="bg-slate-700 text-white text-opacity-90">
+        <slot />
+      </div>
+    </div>
+    <Bubbles />
   </body>
 </html>
 
@@ -30,9 +38,9 @@ const { title } = Astro.props;
   * {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-      "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-      "Helvetica Neue", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+      'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+      'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
