fix: fix animations

--- a/src/components/Bubbles.astro
+++ b/src/components/Bubbles.astro
@@ -53,3 +53,26 @@
 <div class="absolute inset-0 -z-10">
   <ul id="bg-bubbles" class="relative h-full w-full"></ul>
 </div>
+
+<style>
+  @-webkit-keyframes square {
+    0% {
+      -webkit-transform: translateY(0);
+      transform: translateY(0);
+    }
+    100% {
+      -webkit-transform: translateY(-150vh) rotate(600deg);
+      transform: translateY(-150vh) rotate(600deg);
+    }
+  }
+  @keyframes square {
+    0% {
+      -webkit-transform: translateY(0);
+      transform: translateY(0);
+    }
+    100% {
+      -webkit-transform: translateY(-150vh) rotate(600deg);
+      transform: translateY(-150vh) rotate(600deg);
+    }
+  }
+</style>
