feat: add resume

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body
-    class="m-0 flex min-h-screen w-full items-center justify-center overflow-hidden bg-slate-500"
+    class="m-0 flex min-h-screen w-full items-center justify-center overflow-scroll bg-slate-500 py-8 print:p-0"
   >
     <div
       class="w-full max-w-full overflow-hidden rounded-xl sm:max-w-screen-sm"
