--- a/src/components/Bubbles.astro
+++ b/src/components/Bubbles.astro
@@ -50,7 +50,7 @@
   start();
 </script>
 
-<div class="absolute inset-0 -z-10">
+<div class="fixed inset-0 -z-10">
   <ul id="bg-bubbles" class="relative h-full w-full"></ul>
 </div>
 
