--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Bubbles from '../components/Bubbles.astro';
 import GithubIcon from '../components/icons/github.astro';
 import LinkedInIcon from '../components/icons/linkedin.astro';
-import DownloadIcon from '../components/icons/download.astro';
 import EnvelopeIcon from '../components/icons/envelope.astro';
+import ListIcon from '../components/icons/list.astro';
 ---
 
 <Layout title="Samuel Fry">
@@ -53,11 +52,10 @@ import EnvelopeIcon from '../components/icons/envelope.astro';
       >
         <a
           class="relative flex flex-1 items-center justify-center gap-2 py-6 text-sm uppercase transition-all before:absolute before:bottom-0 before:right-0 before:top-0 before:w-px before:bg-gradient-to-b before:from-gray-500 before:to-transparent hover:bg-slate-600"
-          href="https://storage.samuelfry.com/personal-website/Resume.pdf"
-          download
+          href="/resume"
         >
-          <DownloadIcon />
-          Download Resume
+          <ListIcon />
+          Resume
         </a>
         <a
           class="flex flex-1 items-center justify-center gap-2 py-6 text-sm uppercase transition-all hover:bg-slate-600"
