--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import Bubbles from '../components/Bubbles.astro';
+import Bubbles from '../components/Bubbles.svelte';
 export interface Props {
   title: string;
 }
@@ -30,7 +30,7 @@ const { title } = Astro.props;
         <slot />
       </div>
     </div>
-    <Bubbles />
+    <Bubbles client:only="svelte" />
   </body>
 </html>
 
