--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,19 +6,19 @@ import EnvelopeIcon from '../components/icons/envelope.astro';
 import ListIcon from '../components/icons/list.astro';
 ---
 
-<Layout title="Samuel Fry">
+<Layout title="Samuel Fry" baseColor="mocha">
   <div
-    class="relative before:absolute before:-bottom-2/3 before:-left-1/4 before:h-3/4 before:w-full before:rotate-12 before:bg-slate-700 after:absolute after:-bottom-2/3 after:left-1/4 after:h-3/4 after:w-full after:-rotate-12 after:bg-slate-700"
+    class="before:bg-base after:bg-base relative before:absolute before:-bottom-2/3 before:-left-1/4 before:h-3/4 before:w-full before:rotate-12 after:absolute after:-bottom-2/3 after:left-1/4 after:h-3/4 after:w-full after:-rotate-12"
   >
     <img class="h-80 w-full object-cover" src="/bg-photo.webp" alt="Keyboard" />
   </div>
 
   <div class="flex flex-col items-center gap-2">
     <div
-      class="relative -mt-20 before:absolute before:-left-2.5 before:top-2.5 before:h-full before:w-full before:rounded-full before:bg-gradient-to-tr before:from-[rgba(255,152,0,0.4)] before:to-transparent"
+      class="before:from-peach/60 relative -mt-20 before:absolute before:-left-2.5 before:top-2.5 before:h-full before:w-full before:rounded-full before:bg-gradient-to-r before:to-transparent"
     >
       <img
-        class="relative rounded-full border-2 border-slate-600"
+        class="border-surface2 relative rounded-full border-2"
         src="/profile.webp"
         alt="Samuel Fry"
         height="146"
@@ -28,7 +28,7 @@ import ListIcon from '../components/icons/list.astro';
 
     <main class="relative mt-4 flex w-full flex-col items-center">
       <h1 class="text-4xl">Samuel Fry</h1>
-      <code class="mt-2.5 text-base text-orange-400">Web Developer</code>
+      <code class="text-peach mt-2.5 text-base">Web Developer</code>
 
       <div class="mb-16 mt-6 flex gap-4">
         <a
@@ -51,14 +51,14 @@ import ListIcon from '../components/icons/list.astro';
         class="relative flex w-full before:absolute before:left-0 before:right-0 before:h-px before:bg-gradient-radial before:from-gray-500 before:to-transparent"
       >
         <a
-          class="relative flex flex-1 items-center justify-center gap-2 py-6 text-sm uppercase transition-all before:absolute before:bottom-0 before:right-0 before:top-0 before:w-px before:bg-gradient-to-b before:from-gray-500 before:to-transparent hover:bg-slate-600"
+          class="hover:bg-surface2 relative flex flex-1 items-center justify-center gap-2 py-6 text-sm uppercase transition-all before:absolute before:bottom-0 before:right-0 before:top-0 before:w-px before:bg-gradient-to-b before:from-gray-500 before:to-transparent"
           href="/resume"
         >
           <ListIcon />
           Resume
         </a>
         <a
-          class="flex flex-1 items-center justify-center gap-2 py-6 text-sm uppercase transition-all hover:bg-slate-600"
+          class="hover:bg-surface2 flex flex-1 items-center justify-center gap-2 py-6 text-sm uppercase transition-all"
           href="mailto:sam@samuelfry.com"
         >
           <EnvelopeIcon />
