--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -3,13 +3,21 @@ import ResumeItem from '../components/ResumeItem.astro';
 import ResumeSection from '../components/ResumeSection.astro';
 import Layout from '../layouts/Layout.astro';
 import PrintIcon from '../components/icons/print.astro';
+import ChevronLeft from '../components/icons/chevronLeft.astro';
 ---
 
 <Layout title="Samuel Fry - Resume">
-  <main class="relative bg-white p-4 text-black print:p-0 print:pt-0">
+  <main class="relative bg-base p-4 text-text print:p-0 print:pt-0">
+    <a
+      href="/"
+      class="absolute left-4 top-4 rounded-lg p-2 text-subtext0 transition-all hover:bg-overlay2/20 print:hidden"
+    >
+      <ChevronLeft />
+    </a>
+
     <button
       onclick="window.print()"
-      class="absolute right-4 top-4 rounded-lg p-2 text-slate-600 transition-all hover:bg-slate-100 print:hidden"
+      class="absolute right-4 top-4 rounded-lg p-2 text-subtext0 transition-all hover:bg-overlay2/20 print:hidden"
     >
       <PrintIcon />
     </button>
@@ -17,13 +25,26 @@ import PrintIcon from '../components/icons/print.astro';
     <section>
       <h1 class="text-center text-xl uppercase">Samuel <strong>Fry</strong></h1>
       <p class="text-center text-xs">
-        <strong>(801) 473-9449</strong> | <a href="mailto:sam@samuelfry.com"
-          >sam@samuelfry.com</a
-        >
+        <a href="tel:8014739449"><strong>(801) 473-9449</strong></a> |
+        <a href="mailto:sam@samuelfry.com">sam@samuelfry.com</a>
       </p>
     </section>
 
     <ResumeSection title="Employment">
+      <ResumeItem
+        title="Senior Software Engineer"
+        company="Collectors"
+        startDate="Mar 2022"
+        endDate="Present"
+      />
+
+      <ResumeItem
+        title="Software Engineer II"
+        company="Collectors"
+        startDate="May 2022"
+        endDate="Mar 2024"
+      />
+
       <ResumeItem
         title="Software Engineer II"
         company="Cameo"
