--- a/src/components/ResumeItem.astro
+++ b/src/components/ResumeItem.astro
@@ -11,11 +11,13 @@ const { title, company, startDate, endDate, items } = Astro.props;
 
 <div class="flex w-full">
   <h2 class="text-md mb-2 mt-4 flex-1">
-    <span class="text-blue-700">{title}</span>, <i class="font-extralight"
-      >{company}</i
+    <span class="text-text">{title}</span>, <i
+      class="font-extralight text-subtext0">{company}</i
     >
   </h2>
-  <p class="mt-4 text-sm font-semibold">{startDate} - {endDate}</p>
+  <p class="mt-4 text-sm font-semibold text-subtext1">
+    {startDate} - {endDate}
+  </p>
 </div>
 {
   items && (
