--- a/src/components/ResumeSection.astro
+++ b/src/components/ResumeSection.astro
@@ -8,7 +8,7 @@ const { title } = Astro.props;
 
 <section>
   <h1
-    class="relative mt-4 text-xl text-blue-800 before:absolute before:bottom-0 before:left-0 before:right-0 before:h-px before:bg-gradient-radial before:from-blue-800 before:to-transparent"
+    class="text-text before:from-text relative mt-4 pb-1 text-xl before:absolute before:bottom-0 before:left-0 before:right-0 before:h-px before:bg-gradient-radial before:to-transparent"
   >
     {title}
   </h1>
