--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title, baseColor = 'latte' } = Astro.props;
     <title>{title}</title>
   </head>
   <body
-    class={`${baseColor} bg-overlay2 m-0 flex min-h-screen w-full items-center justify-center overflow-scroll py-8 print:p-0 selection:bg-overlay2/20`}
+    class={`${baseColor} background from-overlay2 to-overlay0 from-70% bg-fixed m-0 flex min-h-screen w-full items-center justify-center overflow-scroll py-8 print:p-0 selection:bg-overlay2/20`}
   >
     <div
       class="w-full max-w-full overflow-hidden rounded-xl sm:max-w-screen-sm"
@@ -34,6 +34,13 @@ const { title, baseColor = 'latte' } = Astro.props;
     <Bubbles client:only="svelte" />
   </body>
 </html>
+
+<style>
+  .background {
+    background-image: linear-gradient(to top, var(--tw-gradient-stops)),
+      url(noise.png);
+  }
+</style>
 
 <style is:global>
   * {
