--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,14 +51,14 @@ import ListIcon from '../components/icons/list.astro';
         class="relative flex w-full before:absolute before:left-0 before:right-0 before:h-px before:bg-gradient-radial before:from-gray-500 before:to-transparent"
       >
         <a
-          class="hover:bg-surface2 relative flex flex-1 items-center justify-center gap-2 py-6 text-sm uppercase transition-all before:absolute before:bottom-0 before:right-0 before:top-0 before:w-px before:bg-gradient-to-b before:from-gray-500 before:to-transparent"
+          class="relative flex flex-1 items-center justify-center gap-2 py-6 text-sm uppercase transition-all before:absolute before:bottom-0 before:right-0 before:top-0 before:w-px before:bg-gradient-to-b before:from-gray-500 before:to-transparent hover:bg-gradient-to-r hover:from-transparent hover:to-peach/60"
           href="/resume"
         >
           <ListIcon />
           Resume
         </a>
         <a
-          class="hover:bg-surface2 flex flex-1 items-center justify-center gap-2 py-6 text-sm uppercase transition-all"
+          class="flex flex-1 items-center justify-center gap-2 py-6 text-sm uppercase transition-colors hover:bg-gradient-to-r hover:from-peach/60 hover:to-transparent"
           href="mailto:sam@samuelfry.com"
         >
           <EnvelopeIcon />
